part1/todo-01/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-01-svc
spec:
  type: ClusterIP
  selector:
    app: todo-01
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 3030
